--- a/dia2/index.html
+++ b/dia2/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pesquisa de Satisfação</title>
-    
+    <title>Daniel dia 2</title>
 </head>
 <body>
-
-    <button onclick="pesquisaSatisfacao()">Pesquisa de Satisfação</button>
     <script src="main.js"></script>
-    
+    <button onclick="calculo()">Calcule aqui</button>
 </body>
 </html>
